# DataMining_NYC_Taxi

./: .gitignore  README.md  app.py  apriori_tab.py  build_cluster_hour_tx.py  build_trips_with_cluster.py  dispatch.py  main.py  pyproject.toml  rules_engine.py  run_pipeline.py  run_pipeline_tmp.py
